--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
-    <title>姜文学术主页</title>
+    <title>姜文学术主页 - 大连理工大学研究生</title>
     <meta charset="utf-8">
+    <style>
+        /* 整体样式：简洁、居中、留白 */
+        body {
+            font-family: "Arial", "Microsoft YaHei", sans-serif; /* 适配中英文显示 */
+            max-width: 800px; /* 限制页面宽度，避免内容过宽 */
+            margin: 50px auto; /* 上下留空，左右自动居中 */
+            padding: 0 30px; /* 移动端适配，避免内容贴边 */
+            line-height: 1.6; /* 行高优化，提升可读性 */
+            color: #333; /* 正文深灰色，比纯黑更柔和 */
+            background-color: #f9f9f9; /* 浅灰背景，避免纯白刺眼 */
+        }
+        /* 标题样式：突出且不夸张 */
+        h1 {
+            color: #2c3e50; /* 深蓝灰色标题，显专业 */
+            border-bottom: 2px solid #3498db; /* 蓝色下划线，强调标题 */
+            padding-bottom: 10px; /* 标题与下划线留空 */
+            margin-bottom: 30px; /* 标题与正文留空 */
+        }
+        /* 段落样式：增加间距，区分内容块 */
+        p {
+            margin: 15px 0; /* 段落上下留空，避免拥挤 */
+            font-size: 16px; /* 正文字号，适配阅读 */
+        }
+        /* 链接样式：突出且hover有反馈 */
+        a {
+            color: #3498db; /* 蓝色链接，显清晰 */
+            text-decoration: none; /* 去除默认下划线 */
+        }
+        a:hover {
+            text-decoration: underline; /* 鼠标悬浮时显示下划线，提示可点击 */
+            color: #2980b9; /* hover时加深颜色，增强交互感 */
+        }
+    </style>
 </head>
 <body>
     <h1>姜文 - 大连理工大学研究生</h1>
-    <p>研究方向：软件工程，人工智能，强化学习，小样本学习</p>
-    <p>所属学院/课题组：软件学院</p>
-    <p>邮箱：jw1227@mail.dlut.edu.cn</p>
+    <p><strong>研究方向</strong>：软件工程、人工智能、强化学习、小样本学习</p>
+    <p><strong>所属学院</strong>：软件学院</p>
+    <p><strong>联系邮箱</strong>：jw1227@mail.dlut.edu.cn</p>
+    </p>
 </body>
 </html>
